# mypass

./: LICENSE  mypass.py  pyproject.toml  requirements.txt
config/: wordlist.txt
src/mypass/: __init__.py  database.py
tests/: test_database.py
