[project]
name = "mypass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Balagopal Komarath", email = "bkomarath@rbgo.in" }
]
requires-python = ">=3.13"
dependencies = [
    "pynacl>=1.6.2",
]

[project.scripts]
mypass = "mypass:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
